-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Platforms 2017-06-19
-
None
-
None
-
None
-
None
-
None
-
None
-
None
After the change made in `153c4a036ac` (SERVER-29238), the codebase is no longer able to build on FreeBSD. This is due to a missing implementation of `ProcessInfo::getNumAvailableCores` on FreeBSD. The implementation was always missing, but as it is finally used after the referenced change, the final binaries will not link.