SERVER-29458 Fix building on FreeBSD

`ProcessInfo::getNumAvailableCores` has no implementation on
FreeBSD.  After the change made in `153c4a036ac` (SERVER-29238),
the codebase is no longer able to build on FreeBSD. This is due
to a missing implementation of `ProcessInfo::getNumAvailableCores`
on FreeBSD. The implementation was always missing, but as it
is finally used after the referenced change, the final binaries
will not link.